--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-elixir_kucoin_pump-*.tar
+kucoin_pump-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
